Some love for java generics